src/components/css/Dashboard.css
/******* Dashboard ********/

.dashboard {
  position: relative;
  padding-right: 20px !important;
  padding-left: 160px !important;
  padding-top: 50px !important;
  display: flex;
  align-items: top;
  justify-content: center;
  width: 100vw;
  height: calc(100vh - 150px);
  overflow: auto !important;
}

.dashboardClosed {
  position: relative;
  padding-right: 20px !important;
  padding-left: 80px !important;
  padding-top: 50px !important;
  display: flex;
  align-items: top;
  justify-content: center;
  width: 100vw;
  height: calc(100vh - 150px);
  overflow: auto !important;
}

.chart-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  overflow: hidden !important;
}

.chart-container-experiment {
  min-width: 100% !important;
}

.globe-container-experiment {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 500px;
  width: 500px;
  overflow: hidden !important;
}

.date-select-row {
  height: 30px;
  background: rgb(0, 0, 0, 1);
  margin: auto !important;
  margin-bottom: 50px;
  border: 1px solid rgb(21, 21, 21);
  border-radius: 5px;
  font-family: Geneva, sans-serif;
  color: rgb(187, 155, 49) !important;
  line-height: 28px !important;
  justify-content: left;
}

/****** New Dashboard *****/
@media screen and (min-width: 940px) {
  .date-select-row {
    width: 420px;
    margin-left: 45% !important;
  }
}

@media screen and (max-width: 939px) and (min-width: 610px) {

  /*Switch when width is 940px*/
  .date-select-row {
    width: 420px;
    padding: 0%;
    text-indent: 15px !important;
    align-items: flex-end;
  }
}

@media screen and (max-width: 609px) {

  /*Switch when width is 610px*/
  .date-select-row {
    width: 100%;
    text-indent: 0px !important;
  }
}

@media screen and (max-width: 450px) {
  .date-select-text {
    display: none;
  }
}

@media screen and (max-width: 544px) {
  .date-select-row {
    --bs-gutter-x: 0rem;
  }
}

.tempStore {
  padding-top: 10px;
  margin-top: 30px;
  margin-right: 0px;
  background-color: rgb(44, 44, 44);
  justify-content: left;
  --bs-gutter-x: 1.25rem;
  transform: translateY(30px);
}

.btn-outline-light {
  --bs-btn-color: rgb(218, 218, 218);
  --bs-btn-hover-color: rgb(218, 218, 218);
  --bs-btn-border-color: transparent;
  --bs-btn-hover-bg: transparent;
  --bs-btn-hover-border-color: transparent;
  --bs-btn-active-color: transparent;
  --bs-btn-active-bg: transparent;
  --bs-btn-active-border-color: transparent;
  --bs-btn-active-shadow: transparent;
}

.btn-outline-warning {
  --bs-btn-color: rgb(187, 155, 49);
  --bs-btn-border-color: transparent;
  --bs-btn-hover-bg: transparent;
  --bs-btn-hover-border-color: transparent;
  --bs-btn-active-bg: transparent;
  --bs-btn-active-border-color: transparent;
}

.btn {
  --bs-btn-padding-x: 0.25rem;
}

.dashboard-data-grid {
  position: relative;
  display: grid;
  width: 100%;
  font-family: Geneva, sans-serif;
  color:rgb(218, 218, 218);
  grid-template-columns: auto repeat(6, 1fr);
  grid-template-rows: repeat(2, auto);
  column-gap: 4px;
  row-gap: 10px;
  margin-top: 7%;
  margin-bottom: 10%;
  justify-items: center;
  align-items: center;
}

.guageText {
  text-align: center;
  font-size: 60%;
}

